2010-10-23  Ben Abbott  <bpabbott@mac.com>

	* interpreter/strings.txi: Add @DOCSTRING(strread).

2010-10-23  John W. Eaton  <jwe@octave.org>

	* interpreter/io.txi (Opening and Closing Files):
	Document is_valid_file_id.

2010-10-21  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Gunnar Farnebäck to the list.

2010-10-18  John W. Eaton  <jwe@octave.org>

	* interpreter/image.txi (Displaying Images):
	Delete documentation for image_viewer.

2010-10-17  John W. Eaton  <jwe@octave.org>

	* interpreter/strings.txi: Document untabify.

2010-09-30  John W. Eaton  <jwe@octave.org>

	* interpreter/contributors.in: Add Jordi Gutiérrez Hermoso to
	the list.  Fix spelling of Søren Hauberg.

2010-09-28  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/Makefile.am, doc/interpreter/geometryimages.m,
	doc/interpreter/images.awk, doc/interpreter/interpimages.m,
	doc/interpreter/plotimages.m, doc/interpreter/sparseimages.m: Use
	Octave to create pdf versions of plots for documentation rather than
	Ghostscript via Makefile.

2010-09-28  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/geometryimages.m, doc/interpreter/interpimages.m,
	doc/interpreter/plotimages.m, doc/interpreter/sparseimages.m: Untabify
	scripts.

2010-09-27  Rik  <octave@nomad.inbox5.com>

	* interpreter/mk_doc_cache.m: Use single quotes for regular expression
	patterns where possible.

2010-09-25  Rik  <octave@nomad.inbox5.com>

	* interpreter/mk_doc_cache.m: Remove requirement for PCRE to build
	doc cache.  Correctly parse first sentence from docstrings with
	multiple @deftypefn lines.

2010-09-15  John W. Eaton  <jwe@octave.org>

	* interpreter/Makefile.am (EXTRA_DIST): Add images.awk to the list.

2010-08-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/matrix.txi: Add documentation for randi function.

2010-08-13  Rik  <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Update @EXAMPLEFILE dependencies.

2010-08-10  Rik  <octave@nomad.inbox5.com>
