@@ -1,3 +1,8 @@
+2010-10-23  John W. Eaton  <jwe@octave.org>
+
+	* interpreter/io.txi (Simple File I/O): Document textscan and
+	textread.
+
 2010-10-23  Ben Abbott  <bpabbott@mac.com>
 
 	* interpreter/strings.txi: Add @DOCSTRING(strread).
